--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,26 +1,36 @@
 # Dependencies
-/node_modules
+node_modules/
 /.pnp
 .pnp.js
+package-lock.json
+yarn.lock
 
 # Environment variables
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*.local
+.env.development
+.env.test
+.env.production
 
 # Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-logs
+logs/
 *.log
 
 # Build artifacts
 /dist
 /build
 /coverage
+.nyc_output/
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
 
 # OS files
 .DS_Store
@@ -28,11 +38,40 @@ Thumbs.db
 .directory
 
 # Editor directories and files
-/.idea
-/.vscode
+.idea/
+.vscode/
 *.swp
 *.swo
 *~
+*.sublime-project
+*.sublime-workspace
+
+# Temporary files
+/tmp
+/temp
+*.tmp
 
 # Optional: MongoDB data directory
-/data/db 
+/data/db
+
+# Optional: Local development files
+.localdev/
+.cache/
+
+# Test files
+/coverage
+/.nyc_output
+
+# Debug
+.debug/
+
+# Optional: Database files
+*.sqlite
+*.db
+
+# Uploads directory (if you're handling local file uploads)
+/uploads
+
+# API documentation
+/docs/api
+/api-docs
