--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,17 +1,9 @@
 {
+  "framework": "create-react-app",
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
-  ],
-  "cleanUrls": true,
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=0, must-revalidate"
-        }
-      ]
+    { 
+      "source": "/(.*)", 
+      "destination": "/" 
     }
   ]
 }
